# harness

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
.harness/: config.json  goal.md  status.md
examples/: agent-builder.toml  agent-evaluator.toml  agent-frontend-builder.toml  agent-planner.toml  agent-security-reviewer.toml  workflow-parallel-build.toml  workflow-security-audit.toml  workflow-standard.toml
plugins/: example-hook.sh  example.toml  notify-email.toml  notify-slack.toml  notify-telegram.toml  notify-webhook.toml
prompts/: builder.md  evaluator.md  planner.md
spec/: HARNESS-V3-BUILD-TASK.md  HARNESS-V3-SPEC.md  TUI-BUILD-TASK.md
src/: agents.rs  artifacts.rs  cli_backend.rs  config.rs  evaluator.rs  global_config.rs  main.rs  notifications.rs  plugins.rs  progress.rs  prompts.rs  scl.rs  scl_lifecycle.rs  vault.rs  workflows.rs  xdg.rs
src/bridge/: telegram.rs
src/commands/: agent_cmd.rs  bridge_cmd.rs  build.rs  context.rs  daemon.rs  doctor.rs  evaluate.rs  evaluator_cmd.rs  feedback.rs  init.rs  mod.rs  plan.rs  reset.rs  run.rs  schedule.rs  status.rs  vault_cmd.rs  workflow_cmd.rs  workspace.rs
src/tui/: mod.rs  output_panel.rs  spec_parser.rs  status_panel.rs
tests/: integration.rs
