[package]
name = "harness"
version = "0.1.0"
edition = "2024"
description = "CLI harness for planner → builder → evaluator loops using subscription CLI tools"
license = "MIT"
keywords = ["cli", "orchestration", "ai", "harness", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
syntect = "5"
