[package]
name = "harness"
version = "0.10.0"
edition = "2024"
description = "CLI harness for planner → builder → evaluator loops using subscription CLI tools"
license = "MIT"
repository = "https://github.com/jwgale/harness"
keywords = ["cli", "orchestration", "ai", "harness", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
syntect = "5"
dirs = "6"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
sanctum-ai = "0.4"
hex = "0.4"
tokio = { version = "1", features = ["rt", "net"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
